--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^10.12.10",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
