--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
