--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "3d-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
-    "framer-motion": "^10.12.10",
-    "next": "13.4.2",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.4.3",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3"
   }
 }
