feat: add an improved project page and refactor the codebase
- Removed unused code
- Centralized code to make data controllable
- Added Biome linter and formatter
- Added environment variables and Open Graph metadata
- Reorganized assets and components
- Added motion wrapper
- Added favicon
- migrate tech stack from image icon to react-icons.
- Improve my latest project & project links

--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "lint:fix": "biome check --fix",
+    "format:check": "biome format --check",
+    "format:fix": "biome format --write"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.13.8",
     "framer-motion": "^12.23.24",
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^10.0.0"
+    "react-intersection-observer": "^10.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "typescript": "^5",
