fix: the package-lock.json file caused an error during the build process
revert install and build commands to npm in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
     "framework": "nextjs",
-    "installCommand": "bun install",
-    "buildCommand": "bun run build"
+    "installCommand": "npm install",
+    "buildCommand": "npm run build"
 }
